Minor logo alignment fix in detail dialog.

--- a/ui/src/app/dialog-detail/dialog-detail.component.css
+++ b/ui/src/app/dialog-detail/dialog-detail.component.css
@@ -137,7 +137,7 @@ iframe {
 
 .logo {
     margin-right: auto;
-    margin-left: 8px;
+    margin-left: 16px;
 }
 
 .newtag{
